--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fontawesome": "^5.6.3",
     "jquery": "^3.7.1",
     "next": "15.5.4",
+    "nodemailer": "^7.0.6",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0"
